코드 수정 #4